# Sandcore

./: Cargo.toml  README.md  Sandcore.sln  Sandcore.vcxproj  Sandcore.vcxproj.filters
Source/: main.cpp  settings.txt
Source/Additional/Clock/: Clock.cpp  Clock.ixx
Source/Additional/SimplexNoise/: SimplexNoise.cpp  SimplexNoise.ixx
Source/Application/: Application.cpp  Application.ixx
Source/World/: World.cpp  World.ixx
assets/: servers.json
sandcore_client/: Cargo.toml
sandcore_client/assets/images/blocks/: air.pyxel  anvil.pyxel  coal_ore.pyxel  dirt.pyxel  furnace.pyxel  gold_ore.pyxel  grass_side.pyxel  grass_top.pyxel  iron_ore.pyxel  lava.pyxel  leaves.pyxel  planks.pyxel  sand.pyxel  stone.pyxel  vacuum.pyxel  water_3.pyxel  water_4.pyxel  water_5.pyxel  wood_side.pyxel  wood_top.pyxel  workbench.pyxel  wrong.pyxel
sandcore_client/assets/images/blocks/wall/: wall_compressed.pyxel  wall_ultimate.pyxel
sandcore_client/src/: main.rs
sandcore_client/src/app/: mod.rs
sandcore_client/src/app/scenes/: message.rs  mod.rs  scene.rs  state.rs
sandcore_client/src/app/scenes/connection_menu/: connection_state.rs  mod.rs
sandcore_client/src/app/scenes/gameplay/: mod.rs
sandcore_client/src/app/scenes/gameplay/renderer/: camera.rs  mod.rs
sandcore_client/src/app/scenes/gameplay/renderer/assets/: atlas.rs  mod.rs
sandcore_client/src/app/scenes/main_menu/: mod.rs
sandcore_client/src/app/scenes/multiplayer_menu/: mod.rs  server.rs
sandcore_client/src/app/scenes/settings_menu/: mod.rs  settings.rs  settings_state.rs  tab.rs
sandcore_client/src/application/: mod.rs  state.rs
sandcore_client/src/application/gameplay/: client.rs  mod.rs  server.rs  state.rs
sandcore_client/src/application/gameplay/connection/: mod.rs  state.rs
sandcore_client/src/application/gameplay/game/: mod.rs  renderer.rs
sandcore_client/src/application/gameplay/game/renderer/: creature.rs  mod.rs
sandcore_client/src/application/menu/: mod.rs  state.rs
sandcore_client/src/application/menu/main_menu/: mod.rs
sandcore_client/src/application/menu/multiplayer_menu/: event.rs  mod.rs  servers.rs  state.rs
sandcore_client/src/application/menu/multiplayer_menu/connection_menu/: mod.rs
sandcore_client/src/application/menu/settings_menu/: mod.rs  settings.rs  state.rs
sandcore_client/src/assets/: mod.rs
sandcore_client/src/client/: mod.rs
sandcore_client/src/server/: mod.rs
sandcore_client/src/world/: blocks.rs  creature.rs  mod.rs
sandcore_client/src/world/creatures/: creature.rs  mod.rs
sandcore_core/: Cargo.toml
sandcore_core/src/: lib.rs
sandcore_core/tests/: test.rs
sandcore_dialogue/: Cargo.toml
sandcore_dialogue/src/: lib.rs
sandcore_protocol/: Cargo.toml
sandcore_protocol/src/: lib.rs
sandcore_protocol/tests/: test.rs
sandcore_server/: Cargo.toml
sandcore_server/src/: main.rs
sandcore_web/sandcore_web/: package-lock.json  package.json
sandcore_world/: Cargo.toml
sandcore_world/src/: lib.rs
(+107 files in other folders)
