[workspace]
resolver = "2"
members = [
    "sandcore_world",
    "sandcore_client",
    "sandcore_server",
    "sandcore_protocol",
    "sandcore_dialogue",
]

[workspace.dependencies]
tokio = {version = "1.36.0", features = ["full"]}
euclid = {version = "0.22.9", features = ["serde"]}
rand = "0.9.0-alpha.1"
serde = "1.0.197"
serde_json = "1.0.114"

[workspace.dependencies.sandcore_world]
path = "sandcore_world"

[workspace.dependencies.sandcore_dialogue]
path = "sandcore_dialogue"

[workspace.dependencies.sandcore_protocol]
path = "sandcore_protocol"
