[package]
name = "sandcore_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = {workspace = true}
tokio = {workspace = true}
serde = {workspace = true}
euclid = {workspace = true}
serde_json = {workspace = true}
sandcore_core = {workspace = true}

bevy = "0.13.0"
bevy_egui = "0.25.0"
bevy-inspector-egui = "0.23.4"

